# openupgrade

./: README.md
12.0/: patchlog
12.0/setup/win32/: setup.nsi
13.0/.github/workflows/: documentation.yml  flake.yml  test.yml
14.0/.github/workflows/: pre-commit.yml  test.yml
14.0/docsource/: modules130-140.rst
14.0/openupgrade_scripts/: apriori.py
15.0/: .pre-commit-config.yaml  .pylintrc
15.0/.github/workflows/: pre-commit.yml  test.yml
15.0/docsource/: modules140-150.rst
15.0/openupgrade_scripts/: apriori.py
16.0/: .copier-answers.yml  .pre-commit-config.yaml  .ruff.toml  README.md
16.0/.github/workflows/: documentation-commit.yml  test.yml
16.0/docsource/: modules150-160.rst
16.0/openupgrade_framework/: README.rst  __manifest__.py
16.0/openupgrade_framework/static/description/: index.html
16.0/openupgrade_scripts/: README.rst  __manifest__.py  apriori.py
16.0/openupgrade_scripts/readme/: DESCRIPTION.md
16.0/openupgrade_scripts/static/description/: index.html
17.0/: .prettierignore  README.md
17.0/.github/workflows/: documentation-commit.yml  generate-analysis.yml  test.yml
17.0/docsource/: modules160-170.rst
17.0/openupgrade_framework/: __init__.py
17.0/openupgrade_scripts/: apriori.py
18.0/: .copier-answers.yml  .pre-commit-config.yaml  README.md
18.0/.github/workflows/: documentation-commit.yml  generate-analysis-cron.yml  test.yml
18.0/docsource/: modules170-180.rst
18.0/openupgrade_framework/: README.rst  __manifest__.py
18.0/openupgrade_scripts/: README.rst  apriori.py
18.0/setup/_metapackage/: pyproject.toml
(+1191 files in other folders)
